@@ -64,6 +64,8 @@ Version 1.13.11:
    * Fixed crash when modifying an existing friend entry in Preferences.
    * Fixed players being unable to start campaigns in MP mode.
    * Added confirmation prompt when clearing map labels.
+   * Added show_border= key to the [main_map_border] to control whether map
+     borders draw. Right now this is utilized in the cutscene themes.
  * WFL Engine:
    * A new string insert() function has been added, similar to replace()
  * WML Engine:
